LiveLocationActivity inspected code commit

--- a/app/src/main/res/layout/activity_alert_center.xml
+++ b/app/src/main/res/layout/activity_alert_center.xml
@@ -29,8 +29,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:id="@+id/alertRecyclerView"
-        android:layout_below="@+id/back_image_button"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/back_image_button"
+        android:id="@+id/alertRecyclerView"/>
 
 </RelativeLayout>
