--- a/app/src/main/res/layout/alert_card.xml
+++ b/app/src/main/res/layout/alert_card.xml
@@ -1,57 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--suppress ALL -->
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
+    android:id="@+id/alert_card_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_margin="3dp"
+    android:foreground="?selectableItemBackground"
     card_view:cardElevation="5dp"
-    card_view:contentPadding="1dp"
-    android:foreground="?selectableItemBackground">
+    card_view:contentPadding="1dp">
+
     <LinearLayout
+        android:id="@+id/parentLinear"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/parentLinear"
         android:padding="14dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="10"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="10">
+
             <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="0dp"
                 android:id="@+id/alertImage"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1.4"
-                android:src="@drawable/defaultprofile" />
+                android:src="@drawable/defaultprofile"/>
             <TextView
                 android:id="@+id/alertName"
                 android:layout_width="0dp"
-                android:layout_weight="8"
                 android:layout_height="wrap_content"
-                android:text="Username"
-                android:textStyle="bold"
                 android:layout_gravity="center_vertical"
+                android:layout_weight="8"
                 android:padding="5dp"
-                android:textSize="19sp" />
+                android:text="Username"
+                android:textSize="19sp"
+                android:textStyle="bold"/>
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/alertDate"
                 android:layout_width="5dp"
-                android:layout_weight="7"
                 android:layout_height="wrap_content"
-                android:text="Date:"
-                android:layout_marginStart="50dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginStart="50dp"
                 android:padding="5dp"
-                android:textSize="15sp" />
+                android:layout_weight="7"
+                android:text="Date:"
+                android:textSize="15sp"/>
+
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="50dp"
+            android:padding="5dp"
+            android:text="Please help by viewing my location!"
+            android:textSize="15sp"
+            android:textStyle="italic"/>
+
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
