--- a/app/src/main/res/layout/activity_live_location.xml
+++ b/app/src/main/res/layout/activity_live_location.xml
@@ -81,7 +81,7 @@
         android:layout_alignParentStart="true"
         android:onClick="start_geofence"
         android:background="@drawable/button_shape"
-        android:text="Start Geofence"
+        android:text="Click on map to start geofence"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
         android:textSize="16sp" />
